# Jenkins-cicd

./: Dockerfile  Jenkinsfile  Makefile  README.md  hellowrld  hellowrld.cpp  log.txt  main.py  pyproject.toml  run.sh  test
.github/workflows/: hadolint.yml
api/v1/routers/: classification.py  documentation.py  generate.py  health.py  prediction.py  segment.py  summarization.py  transcription.py  translation.py
core/: __init__.py  config.py
manifests/: cert-issuer-nginx-ingress.yaml  certificate.yaml  deployment.yaml  ingress.yaml  service.yaml
schemas/: __init__.py  answer.py  classification.py  documentation.py  error.py  generate.py  health.py  prediction.py  transcription.py
tests/: test_api.py  test_main.py
tests/routers/: test_app.py  test_health.py
