[tool.poetry]
name = "speech-to-text"
version = "0.1.0"
description = ""
authors = ["Harshad Bhandwaldar <hbhandwaldar@gmail.com>"]
readme = "README.md"
packages = [{include = "text_translation_de2en_transformer24x6"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.0.1"
mypy = "^0.931"

[tool.isort]
profile = "black"

[tool.mypy]
# unfortunately cannot inject dependencies into super-linter
# so we have to ignore the imports as they will not have typehints
ignore_missing_imports = true

warn_unused_configs = true
disallow_any_generics = true
# disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
experimental-string-processing = true