[tool.poetry]
name = "speech-to-text-silero"
version = "0.1.0"
description = ""
authors = ["Cyril Pierro <fiopapa32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
torch = "^2.0.0"
torchaudio = "^2.0.1"
omegaconf = "^2.3.0"
numpy = "^1.24.1"
soundfile = "^0.11.0"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
black = "22.10.0"
isort = "5.10.1"
mypy = "0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.mypy]
# unfortunately cannot inject dependencies into super-linter
# so we have to ignore the imports as they will not have typehints
ignore_missing_imports = true

warn_unused_configs = true
disallow_any_generics = true
# disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.black]
experimental-string-processing = true
