[tool.poetry]
name = "image-semantic-segmentation-pretrained-fcn"
version = "0.1.0"
description = ""
authors = ["Kobby Folson <kobbyfolson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# unfortunately cannot inject dependencies into super-linter
# so we have to ignore the imports as they will not have typehints
ignore_missing_imports = true

warn_unused_configs = true
disallow_any_generics = true
# disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
ignore_errors = true

[tool.black]
experimental-string-processing = true
